deletion of accounts

--- a/templates/admin/ip_logs.html
+++ b/templates/admin/ip_logs.html
@@ -12,7 +12,7 @@
                 <input
                     type="text"
                     name="search"
-                    placeholder="search by username or IP..."
+                    placeholder="search by username or ip..."
                     value="{{ request.args.get('search', '') }}"
                     style="padding: 8px; width: 200px"
                 />
