--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,13 @@
     --color-icon: #454545;
     --link-visited: #800080;
     --link-active: #233cfa;
+    --color-hover-danger-top: #ff9c91;
+    --color-hover-danger-bottom: #ad564c;
+    --color-danger-top: #d95648;
+    --color-danger-bottom: #802e25;
+    --color-danger-border: #571d17;
+    --color-danger-text: #fff;
+    --color-span: #d9d9d9;
 }
 
 :root[data-theme="dark"] {
@@ -36,6 +43,13 @@
     --color-icon: #f0f0f0;
     --link-visited: #d555e6;
     --link-active: #59cdff;
+    --color-hover-danger-top: #ff9c91;
+    --color-hover-danger-bottom: #ad564c;
+    --color-danger-top: #d95648;
+    --color-danger-bottom: #802e25;
+    --color-danger-border: #571d17;
+    --color-danger-text: #fff;
+    --color-span: #4a4a4a;
 }
 
 * {
@@ -88,6 +102,16 @@ body {
         inset 0 2px 4px var(--color-shadow-light),
         inset 0 -2px 4px var(--color-shadow-dark),
         2px 2px 5px var(--color-box-shadow);
+    padding: 20px;
+    border-radius: 8px;
+    font-family: "Times New Roman", serif;
+    max-width: 600px;
+    margin: 20px auto;
+    overflow: hidden;
+    line-height: 1.6rem;
+}
+
+.container-3 {
     padding: 20px;
     border-radius: 8px;
     font-family: "Times New Roman", serif;
@@ -255,8 +279,8 @@ input {
 #pfp {
     width: 100%;
     height: auto;
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 700px;
+    max-height: 700px;
     border-radius: 8px;
     object-fit: cover;
     border: 1px solid var(--color-border);
@@ -293,12 +317,34 @@ input {
     margin: 0 auto;
     font-size: 20px;
     font-weight: bold;
+    text-align: center;
+}
+
+span {
+    background-color: var(--color-span);
+    padding: 4px 8px;
+    border-radius: 4px;
+    margin-right: 4px;
+    font-size: 0.9rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    padding-bottom: 10px;
 }
 
 .badges-container {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
-    gap: 4px;
+    gap: 10px;
+}
+
+.badge-containment {
+    display: flex;
 }
 
 @media (max-width: 568px) {
@@ -310,6 +356,10 @@ input {
         max-width: 100%;
         max-height: 100%;
     }
+
+    .badges-container {
+        margin-bottom: 20px;
+    }
 }
 
 .paste-card {
@@ -318,24 +368,32 @@ input {
         inset 0 2px 4px var(--color-shadow-light),
         inset 0 -2px 4px var(--color-shadow-dark),
         2px 2px 5px var(--color-box-shadow);
-    padding: 10px 0;
+    padding: 15px;
     border-radius: 8px;
     min-width: 200px;
     z-index: 1;
     margin-top: 10px;
 }
 
+.paste-link,
+.paste-link:visited {
+    display: block;
+    text-decoration: none;
+    color: var(--color-icon);
+    font-size: 1.3rem;
+    font-family: "Times New Roman", serif;
+}
+
 .paste-card:hover {
     background: linear-gradient(to bottom, #d0d0d0, #a0a0a0);
 }
 
-.paste-card a {
-    display: block;
-    padding: 10px 20px;
-    text-decoration: none;
-    color: var(--color-icon);
-    font-size: 1.5rem;
-    font-family: "Times New Roman", serif;
+.paste-card span {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    display: inline-block;
 }
 
 .paste-stats {
@@ -447,4 +505,29 @@ th {
 .meta-content textarea {
     height: 100%;
     min-height: 80px;
+}
+
+.btn-danger {
+    background: linear-gradient(
+        to bottom,
+        var(--color-danger-top),
+        var(--color-danger-bottom)
+    );
+    color: var(--color-danger-text);
+    border-color: var(--color-danger-border);
+    box-shadow:
+        inset 0 2px 4px var(--color-shadow-light),
+        inset 0 -2px 4px var(--color-shadow-dark),
+        2px 2px 5px var(--color-box-shadow);
+}
+
+.btn-danger:hover {
+    background: linear-gradient(
+        to bottom,
+        var(--color-hover-danger-top),
+        var(--color-hover-danger-bottom)
+    );
+    box-shadow:
+        inset 0 1px 0 #fff,
+        0 4px 8px rgba(0, 0, 0, 0.3);
 }
