--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -1,9 +1,10 @@
 {% extends "layout.html" %} {% block content %}
-<div class="container-2">
-    <p>hi, admin {{ current_user.username }}!</p>
-    <a href="{{ url_for('ip_logs') }}">ip logs</a> ---
-    <a href="{{ url_for('users') }}">users</a> ---
-    <a href="{{ url_for('pastes') }}">pastes</a> ---
+<div style="text-align: center" class="container-2">
+    <h1>hi, admin {{ current_user.username }}!</h1>
+    <br />
+    <a href="{{ url_for('ip_logs') }}">ip logs</a> ===
+    <a href="{{ url_for('users') }}">users</a> ===
+    <a href="{{ url_for('pastes') }}">pastes</a> ===
     <a href="{{ url_for('invite_codes') }}">invite codes</a>
 </div>
 {% endblock %}
