--- a/templates/admin/all_invite_codes.html
+++ b/templates/admin/all_invite_codes.html
@@ -41,6 +41,7 @@
                                     value="{{ csrf_token() }}"
                                 />
                                 <button
+                                    class="btn btn-danger"
                                     type="submit"
                                     onclick="
                                         return confirm(
