--- a/templates/admin/pastes.html
+++ b/templates/admin/pastes.html
@@ -23,7 +23,7 @@
                     name="csrf_token"
                     value="{{ csrf_token() }}"
                 />
-                <button type="submit">search</button>
+                <button class="btn" type="submit">search</button>
             </form>
 
             <table>
@@ -68,7 +68,7 @@
                                     name="csrf_token"
                                     value="{{ csrf_token() }}"
                                 />
-                                <button class="btn" type="submit">
+                                <button class="btn btn-danger" type="submit">
                                     delete
                                 </button>
                             </form>
