--- a/templates/paste/transfer_paste.html
+++ b/templates/paste/transfer_paste.html
@@ -31,7 +31,7 @@
             name="new_owner"
             placeholder="username"
         />
-        <button class="btn" type="submit">transfer ownership</button>
+        <button class="btn btn-danger" type="submit">transfer ownership</button>
     </form>
     <br />
     <a href="{{ url_for('view_paste', paste_id=paste.id) }}"
