--- a/templates/admin/all_invite_codes.html
+++ b/templates/admin/all_invite_codes.html
@@ -3,7 +3,7 @@
 <html>
     <body>
         <div class="container-1">
-            <table border="1">
+            <table class="user-table">
                 <thead>
                     <tr>
                         <th>code</th>
