--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -22,7 +22,7 @@
         border="1"
         cellpadding="8"
         cellspacing="0"
-        style="width: 100%; margin-bottom: 20px; max-width: 800px;"
+        class="user-table"
     >
         <thead>
             <tr>
@@ -45,6 +45,7 @@
                         {% for badge in item.user.badges %}
                         <span
                             style="
+                            margin-top: 10px;
                                 display: inline-block;
                             "
                         >
@@ -121,7 +122,7 @@
                 </td>
                 <td>{% if item.banned %} yes {% else %} nah {% endif %}</td>
                 <td>
-                    <div style="display: flex; gap: 10px">
+                    <div id="flex-user-actions">
                         {% if item.banned %}
                         <form
                             method="post"
