--- a/static/style.css
+++ b/static/style.css
@@ -151,9 +151,12 @@ textarea {
         2px 2px 5px var(--color-box-shadow);
     padding: 7px 18px;
     font-family: "Times New Roman", serif;
+    font-size: 0.8rem;
     color: var(--color-icon);
     cursor: pointer;
     transition: all 0.2s ease;
+    text-decoration: none;
+    color: var(--color-icon) !important;
 }
 
 .btn:hover {
@@ -547,7 +550,7 @@ th {
         var(--color-danger-top),
         var(--color-danger-bottom)
     );
-    color: var(--color-danger-text);
+    color: var(--color-danger-text) !important;
     border-color: var(--color-danger-border);
     box-shadow:
         inset 0 2px 4px var(--color-shadow-light),
