--- a/templates/paste/edit_paste.html
+++ b/templates/paste/edit_paste.html
@@ -98,7 +98,7 @@
         <div style="display: flex; justify-content: space-between">
         <button class="btn" type="submit">save changes</button>
     </form>
-<div style="display: flex; gap: 3px">
+<div style="display: flex; gap: 3px; align-items: center">
         <form
             method="POST"
             action="{{ url_for('delete_paste', paste_id=paste.id) }}"
@@ -109,10 +109,11 @@
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             <button class="btn btn-danger" type="submit">delete paste</button>
         </form>
-
-        <a href="{{ url_for('view_paste', paste_id=paste.id) }}"
-            ><button class="btn ">cancel</button></a
+<div>
+        <a class="btn" href="{{ url_for('view_paste', paste_id=paste.id) }}"
+            >cancel</a
         >
+</div>
 </div>
     </div>
 </div>
