nav a class fix + add center

--- a/static/style.css
+++ b/static/style.css
@@ -253,6 +253,7 @@ input {
     border-radius: 8px;
     min-width: 200px;
     z-index: 1;
+    color: var(--color-icon);
 }
 
 .dropdown-content.show {
